2005-11-18  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/druid-qif-import.c:
	* src/gnome/druid-loan.c:
	* src/gnome/window-reconcile.c:
	* src/gnome/lot-viewer.c:
	* src/gnome/druid-acct-period.c:
	* src/gnome/druid-merge.c:
	* src/gnome/druid-stock-split.c:
	* src/gnome/druid-hierarchy.c: Remove calls to the noop function
	gnome_window_icon_set_from_default().  In gtk2 all windows get the
	default application icon unless specified otherwise.

2005-11-18  Derek Atkins  <derek@ihtfp.com>

	* configure.in:  Derrick Hudson's patch to tell users
	  that they need gtkhtml-3.

2005-11-18  David Hampton  <hampton@employees.org>

	* src/report/report-gnome/gnc-plugin-page-report-ui.xml:
	* src/report/report-gnome/gnc-plugin-page-report.c: Restore the
	"Save Report" code that was lost in one of the head->g2 syncs.

2005-11-17  David Hampton  <hampton@employees.org>

	* src/quotes/dump-finance-quote: Add support for printing currency
	quotes.  Report a failure of F::Q to return a currency quote.

	* most files: Update FSF street address.

2005-11-16  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/dialog-account-picker.c:
	* src/business/business-gnome/dialog-vendor.c:
	* src/business/business-gnome/gnc-plugin-business.c:
	* src/business/business-gnome/dialog-customer.c:
	* src/business/business-gnome/dialog-job.c:
	* src/business/business-gnome/gnc-plugin-page-invoice.c:
	* src/business/business-gnome/dialog-employee.c:
	* src/business/business-gnome/business-options-gnome.c:
	* src/business/business-gnome/dialog-invoice.c:
	* src/gnome-utils/druid-gconf-setup.c:
	* src/gnome-utils/gnc-gnome-utils.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/dialog-utils.c:
	* src/gnome/druid-hierarchy.c: Sjoerd Langkemper's <sjoerd-gnome
	at linuxonly.nl> fixes to cast sentinel markers to pointers.
	Solves compilation problems on 64 bit architectures using
	gcc4/glib2.6.  Fixes #321316.
