@@ -1,3 +1,7 @@
+2005-11-19  David Hampton  <hampton@employees.org>
+
+	* src/gnome-utils/gnc-date-format.[ch]: Remove unused function.
+
 2005-11-18  David Hampton  <hampton@employees.org>
 
 	* src/import-export/qif-import/druid-qif-import.c:
